# cali

./: .coverage  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  buildozer.spec  coverage.xml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  style.yml
scripts/: README.md  beep_gen.py  workout.py
src/cali/: __init__.py  __main__.py  audio.py  cli.py  mobile_app.py  models.py  timer.py  workout_app.py  workouts.py
tests/: conftest.py  test_audio.py  test_cli.py  test_models.py  test_timer.py  test_workout_app.py  test_workouts.py
